# orchestra

./: README.md  architecture.pu  docker-compose.yml
language/: entities.pu
services/orchestra-api/: .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  main.go  run.sh
services/orchestra-parser/: README.md  grammar.template.lark  grammar.v1.4.lark  grammar.v1.5.lark  grammar.v1.5.lark.template  orchx2json.py  pyproject.toml
services/orchestra-parser/orchestra_parser/: lang.py  lang_keywords_en.py  lang_value_types.py
services/orchestra-parser/orchestra_parser/src/: orcx2json.py
services/orchestra-parser/orchestra_parser/tests/: gen_sample_orcx.py
services/orchestra-parser/orchestra_parser/tests/samples/: sample.orchx
services/orchestra-parser/src/: json2rdf.py  orcx2json.py
services/orchestra-storage/: .gitignore  USAGE.md
services/orchestra-storage/jena-fuseki-docker-4.1.0/: Dockerfile  docker-compose.yaml
